--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -1,12 +1,7 @@
 ---
 name: mvn
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: [push]
+
 jobs:
   mvn:
     runs-on: ${{ matrix.os }}
