--- a/pom.xml
+++ b/pom.xml
@@ -130,11 +130,10 @@ SOFTWARE.
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
-        <configuration>
-          <source>9</source>
-          <target>9</target>
-          <encoding>UTF-8</encoding>
+        <version>3.10.1</version>
+        <configuration combine.self="override">
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
       <plugin>
